<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Birthdays</string>
    <string name="add_friend">Add friend</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="general_settings">General Settings</string>
    <string name="zodiac">Zodiac</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="message_templates">Message Templates</string>
    <string name="sound_for_notifications">Sound for Notifications</string>
    <string name="please_choose">Please choose a ringtone or \"Silent\"</string>
    <string name="on_birthday">on Birthday</string>
    <string name="no_notification">No Notification</string>
    <string name="_1_day_before">1 day before</string>
    <string name="_2_days_before">2 days before</string>
    <string name="_7_days_before">7 days before</string>
    <string name="_14_days_before">14 days before</string>
    <string name="chinese_zodiac_signs">Chinese Zodiac Signs</string>
    <string name="western_zodiac_signs">Western Zodiac Signs</string>
    <string name="_08_00" translatable="false">08:00</string>
    <string name="about_this_app">About this app</string>
    <string name="time_for_notifications">Time for Notifications</string>
    <string name="order_by_entries">Order by entries</string>
    <string name="none">None</string>
    <string name="zodiac_signs">Zodiac Signs</string>
    <string name="created_by">Created by :</string>
    <string name="creator" translatable="false">Auriga Aristo - 20417012\nHenry David Lie - 20417003</string>
    <string name="create_your_own_boilerplates">Create your own boilerplates for congratulations\nvia text message or email</string>
    <string name="congratulation_text">Congratulation Text</string>
    <string name="congratulation_exp">For congratulations messages that you send out this app, you can create custom template here.</string>
    <string name="subject_for_emails">Subject for emails</string>
    <string name="subject_exp">For emails out of this app, you can also set your preffered subject line here.</string>
    <string name="help">Help</string>
    <string name="help_exp">Later, when you send a message to somebody and it\'s their birthday, we will add these texts to the message so you don\'t have to type them every time.</string>
    <string name="personal_data">Personal Data</string>
    <string name="restore_default">Restore Default</string>
    <string name="restore_settings_to_default">Restore settings to default</string>
    <string name="factory_data_reset">Factory data reset</string>
    <string name="erase_all_data">Erase all data on app</string>
    <string name="notifshown">Notifications will be shown</string>
    <string name="notifhidden">No notification</string>
    <string name="_more" translatable="false">...</string>
    <string name="empty_list">Empty List</string>
    <string name="log_out">Log Out</string>
    <string name="turns">turns</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tommorow</string>
    <string name="days_left"> days left</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Agt</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesian</string>
    <string name="by_days_left">by days left</string>
    <string name="by_name">by name</string>
    <string name="by_ages">by age</string>
    <string name="western">Western</string>
    <string name="chinese">Chinese</string>
    <string name="western_chinese">Western + Chinese</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="saveMsgTemp">Message has been saved</string>
    <string name="saveMsgSub">Subject has been save</string>
    <string name="monkey">Monkey</string>
    <string name="by_age">by age</string>
    <string name="rooster">Rooster</string>
    <string name="dog">Dog</string>
    <string name="pig">Pig</string>
    <string name="rat">Rat</string>
    <string name="ox">Ox</string>
    <string name="tiger">Tiger</string>
    <string name="rabbit">Rabbit</string>
    <string name="dragon">Dragon</string>
    <string name="snake">Snake</string>
    <string name="horse">Horse</string>
    <string name="sheep">Sheep</string>
    <string name="wa_not_installed">WhatsApp not Installed</string>
    <string name="load_data_failed">Load Data Failed</string>
    <string name="share_with">Share with</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="name_req">Name is required</string>
    <string name="date_req">Date of Birth is required</string>
    <string name="phone_req">Phone is required</string>
    <string name="failed_add_friend">Failed to add friend</string>
    <string name="failed_edit_friend">Failed to edit friend</string>
    <string name="about_this_phone">About app</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account_sign_up">Don\'t Have Account? Sign Up</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="email_password_wrong">Email or Password Wrong!</string>
    <string name="password_didnt_match">Password Didn\'t Match!</string>
    <string name="acc_created">Account Created!</string>
    <string name="something_wrong">Something Wrong, Please try again!</string>
    <string name="friend_added">Friend Added</string>
    <string name="pls_select_photo">Please Select a Photo!</string>
    <string name="friend_updated">Friend Updated</string>
    <string name="friend_list">Friend List</string>
    <string name="friend_removed">Friend Removed</string>
    <string name="reset">Reseted</string>
    <string name="uploading_photos">Uploading Photos, Please wait!</string>
</resources>
