<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                style="@style/LinearContainer"
                android:padding="8dp"
                android:orientation="vertical"
                android:id="@+id/general_settings">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general_settings"
                    android:textColor="@color/colorPrimaryLight"/>
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/set_zodiac_signs"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/zodiac_signs"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/zodiac_signs"
                            style="@style/TextViewClickable"
                            android:text="@string/none"
                            android:textColor="#6a6a6a" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    android:id="@+id/messageTemp"
                    style="@style/LinearSettings"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingTop="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/message_templates"
                            android:textSize="18sp"/>
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/create_your_own_boilerplates"
                            android:textColor="#6a6a6a" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/LinearContainer"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/general_settings"
                android:id="@+id/notification_settings">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_settings"
                    android:textColor="@color/colorPrimaryLight"/>
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/set_time_notif"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/time_for_notifications"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/time_notif"
                            style="@style/TextViewClickable"
                            android:text="@string/_08_00"
                            android:textColor="#6a6a6a" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/on_birthday"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/on_birthday"
                            style="@style/TextViewClickable"
                            android:text="@string/no_notification"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                    <CheckBox
                        style="@style/CheckBoxSettings"
                        android:layout_weight="10"
                        android:id="@+id/set_on_birthday"
                        android:onClick="onCheckBoxClicked">
                    </CheckBox>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/_1_day_before"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/one_day_before"
                            style="@style/TextViewClickable"
                            android:text="@string/no_notification"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                    <CheckBox
                        style="@style/CheckBoxSettings"
                        android:layout_weight="10"
                        android:id="@+id/set_one_day_before"
                        android:onClick="onCheckBoxClicked">
                    </CheckBox>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/_2_days_before"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/two_days_before"
                            style="@style/TextViewClickable"
                            android:text="@string/no_notification"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                    <CheckBox
                        style="@style/CheckBoxSettings"
                        android:layout_weight="10"
                        android:id="@+id/set_two_days_before"
                        android:onClick="onCheckBoxClicked">
                    </CheckBox>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/_7_days_before"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/seven_days_before"
                            style="@style/TextViewClickable"
                            android:text="@string/no_notification"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                    <CheckBox
                        style="@style/CheckBoxSettings"
                        android:layout_weight="10"
                        android:id="@+id/set_seven_days_before"
                        android:onClick="onCheckBoxClicked">
                    </CheckBox>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/_14_days_before"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/fourteen_days_before"
                            style="@style/TextViewClickable"
                            android:text="@string/no_notification"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                    <CheckBox
                        style="@style/CheckBoxSettings"
                        android:layout_weight="10"
                        android:id="@+id/set_fourteen_days_before"
                        android:onClick="onCheckBoxClicked">
                    </CheckBox>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/LinearContainer"
                app:layout_constraintTop_toBottomOf="@id/notification_settings"
                android:id="@+id/about_this_app"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_this_app"
                    android:textColor="@color/colorPrimaryLight"/>
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/about"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/about"
                            android:textSize="18sp"/>
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/about_this_phone"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/language"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/language"
                            android:textSize="18sp"/>
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/english"
                            android:id="@+id/lang"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/LinearContainer"
                app:layout_constraintTop_toBottomOf="@id/about_this_app"
                android:id="@+id/personal_data"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_data"
                    android:textColor="@color/colorPrimaryLight"/>
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/restore_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/restore_default"
                            android:textSize="18sp"/>
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/restore_settings_to_default"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    style="@style/LinearSettings"
                    android:id="@+id/factory_reset"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/factory_data_reset"
                            android:textSize="18sp"/>
                        <TextView
                            style="@style/TextViewClickable"
                            android:text="@string/erase_all_data"
                            android:textColor="#6a6a6a"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>