<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nama_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/add_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/userphoto"
            app:civ_border_color="#FF000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/add_photo"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textCursorDrawable="@null"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/DoB"
        style="@style/LinearContainer"
        app:layout_constraintTop_toBottomOf="@id/nama_foto"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/dob"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/add_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_more"
                android:layout_weight="4"
                android:id="@+id/pick_date"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address"
        style="@style/LinearContainer"
        app:layout_constraintTop_toBottomOf="@id/DoB">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/address" />

        <EditText
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone"
        style="@style/LinearContainer"
        app:layout_constraintTop_toBottomOf="@id/address">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="phone"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        style="@style/LinearContainer"
        app:layout_constraintTop_toBottomOf="@id/phone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/email" />

        <EditText
            android:id="@+id/add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:background="@drawable/reg_button_style"
        android:textColor="#fff"
        android:layout_marginBottom="5dp"
        android:id="@+id/add_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/add_cancel" />

    <Button
        android:background="@drawable/reg_button_style"
        android:textColor="#fff"
        android:id="@+id/add_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>